fix: update workflow name and streamline Tauri build process

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Tauri Cross-Platform Build
+name: Build Tauri App (Cross-Platform)
 
 on:
   push:
@@ -9,23 +9,17 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [windows-latest, macos-latest]
+        platform: [macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install Tauri CLI
-        run: cargo install tauri-cli
+          node-version: 20
 
       - name: Install frontend deps
         run: npm install
@@ -33,16 +27,14 @@ jobs:
       - name: Build Next.js frontend
         run: npm run build
 
-      - name: Build Tauri app
-        run: cargo tauri build
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            src-tauri/target/release/bundle/**/*.dmg
-            src-tauri/target/release/bundle/**/*.msi
-            src-tauri/target/release/bundle/**/*.exe
+      - name: Tauri build
+        uses: tauri-apps/tauri-action@v0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_BUILD_TYPE: release
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
+      - name: Upload bundle
+        uses: actions/upload-artifact@v3
+        with:
+          name: tauri-build-${{ matrix.platform }}
+          path: src-tauri/target/release/bundle
