fix: rename workflow and streamline build steps for Tauri application

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Tauri App (Cross-Platform)
+name: Tauri Build (npx cross-platform)
 
 on:
   push:
@@ -24,23 +24,25 @@ jobs:
       - name: Install frontend deps
         run: npm install
 
-      - name: Build Next.js frontend
+      - name: Build frontend
         run: npm run build
 
-      - name: Tauri build
-        uses: tauri-apps/tauri-action@v0
+      - name: Build with Tauri
+        run: npx tauri build
         env:
           TAURI_BUILD_TYPE: release
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload build artifacts
+      - name: Upload macOS build
+        if: runner.os == 'macOS'
         uses: actions/upload-artifact@v4.6.2
         with:
           name: tauri-macos-build
           path: |
             "src-tauri/target/release/bundle/dmg/A Cup of Tasks_*.dmg"
             "src-tauri/target/release/bundle/macos/A Cup of Tasks.app"
-      - name: Upload Windows build artifacts
+
+      - name: Upload Windows build
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4.6.2
         with:
